# arcanum-ce

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/workflows/: ci-build.yml
android/app/: build.gradle
android/app/src/debug/res/values/: strings.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/alexbatalov/arcanumce/: MainActivity.java
first_party/bink_compat/include/: bink_compat.h
first_party/bink_compat/src/: bink_compat.c
first_party/mss_compat/include/: mss_compat.h
first_party/mss_compat/src/: mss_compat.c
first_party/tig/: CMakeLists.txt
first_party/tig/include/tig/: guid.h
first_party/tig/src/: art.c  core.c  file.c  guid.c  video.c
ios/: Info.plist  LaunchScreen.storyboard
macos/: Info.plist  arcanum-ce.icns
src/: arcanum.cc  arcanum.h  main.c  main.cc  net_compat.h
src/game/: a_name.c  a_name.h  ai.c  ai.h  anim.c  anim.h  anim_private.c  anim_private.h  animfx.c  animfx.h  antiteleport.c  antiteleport.cc  antiteleport.h  area.c  area.h  background.c  background.cc  background.h  bless.c  bless.h  brightness.c  brightness.h  broadcast.c  broadcast.h  ci.c  ci.h  combat.c  combat.h  context.h  criticals.h  critter.c  critter.h  curse.c  curse.cc  curse.h  damage_type.h  description.c  description.h  descriptions.h  dialog.c  (+202 more)
src/game/lib/: animfx.cc  animfx.h  background.cc  background.h  bless.cc  brightness.cc  brightness.h  ci.cc  critter.cc  critter.h  curse.h  description.cc  description.h  effect.cc  effect.h  gamelib.cc  gamelib.h  gfade.cc  gfade.h  gmovie.cc  gmovie.h  gsound.cc  gsound.h  item.cc  item.h  jumppoint.cc  jumppoint.h  level.cc  level.h  li.cc  li.h  light.cc  light.h  light_scheme.cc  light_scheme.h  location.cc  location.h  magictech.cc  magictech.h  map.cc  (+42 more)
src/gameuilib/: gameuilib.cc
src/tig/: anna.cc  anna.h  art.c  art.cc  art.h  bmp.c  bmp.h  bmp_utils.c  bmp_utils.h  button.c  button.cc  button.h  cache.c  cache.cc  cache.h  color.c  color.cc  color.h  core.c  core.h  database.c  database.cc  database.h  debug.c  debug.cc  debug.h  draw.c  draw.h  dxinput.c  dxinput.cc  dxinput.h  felicity.cc  felicity.h  file.c  file.cc  file.h  file_cache.c  file_cache.h  find_file.cc  find_file.h  (+56 more)
src/ui/: anim_ui.c  anim_ui.h  broadcast_ui.c  broadcast_ui.h  charedit_ui.c  charedit_ui.h  combat_ui.c  combat_ui.h  compact_ui.c  compact_ui.h  cyclic_ui.c  cyclic_ui.h  dialog_ui.c  dialog_ui.h  fate_ui.c  fate_ui.h  follower_ui.c  follower_ui.h  gameuilib.c  gameuilib.h  hotkey_ui.c  hotkey_ui.h  intgame.c  intgame.h  inven_ui.c  inven_ui.h  iso.c  iso.h  item_ui.c  item_ui.h  logbook_ui.c  logbook_ui.h  mainmenu_ui.c  mainmenu_ui.h  matchmaker_ui.c  matchmaker_ui.h  mp_ctrl_ui.c  mp_ctrl_ui.h  multiplayer_hub_ui.c  multiplayer_hub_ui.h  (+33 more)
test/tig/: art_tests.cc  color_tests.cc  idxtable_tests.cc  kb_tests.cc  map_tests.cc  palette_tests.cc  rect_tests.cc  str_parse_tests.cc
